Added implementation for the Search Feature. Contains autocomplete, error notifications/pop-ups and course list creation based on user input. Not entirely sure if this is fine dependency wise for clean architecture so further comments about that will be especially appreciated.